--- a/src/css/0/reset.css
+++ b/src/css/0/reset.css
@@ -139,7 +139,17 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   margin: 0;
   padding: 0;
   font-size: 100%;
-  font: inherit;
+}
+#root { 
+  border: 0px solid transparent !important;
+}
+
+
+html,
+body {
+  /* usa uno u otro dependiendo del contexto */
+  /* height: 100%; */
+  height: max-content;
 }
 
 *,
@@ -155,3 +165,9 @@ main {
   justify-content: flex-start;
   align-items: center;
 }
+
+/* body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+} */
