--- a/src/css/init.css
+++ b/src/css/init.css
@@ -12,48 +12,19 @@ main {
   width: 100%;
 }
 
-body,
-figure {
-  margin: 0;
-  padding: 0;
-}
-
 section {
   max-width: 700px;
   width: 100%;
   margin: 0 auto 45px;
-  background-color: beige;
+  border: 0.5px solid var(--white-1);
 }
-
 h2 {
-  margin-bottom: 15px;
   line-height: 1.5;
   font-weight: 700;
   font-size: 1.8rem;
 }
-
-h1,
-h2,
-h3,
-h4 {
-  margin: 0;
-  color: var(--black);
-}
-
-h1,
-h2 {
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Open Sans',
-    'Helvetica Neue',
-    sans-serif;
+h1, h2 {
+  color: red;
 }
 
 h3 {
@@ -61,14 +32,10 @@ h3 {
 }
 
 p {
-  color: var(--softGrey);
   font-size: 1rem;
-  line-height: 1.4;
-  margin: 0;
   text-wrap: pretty;
   word-wrap: break-word;
 }
-
 
 a {
   text-decoration: none;
@@ -77,8 +44,6 @@ a {
 
 ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
 }
 
 *,
@@ -99,9 +64,6 @@ ul {
   color: var(--softGrey);
 }
 
-#arrow {
-  color: var(--black);
-}
 
 @media print {
   #print {
@@ -134,13 +96,6 @@ ul {
   }
 }
 
-p {
-  font-size: 1.1rem;
-  line-height: 1.6;
-  text-wrap: pretty;
-  word-wrap: break-word;
-  padding-inline: auto;
-}
 p.caption {
   font-size: 0.9rem;
 }
@@ -153,13 +108,4 @@ label {
   border-radius: 4px;
   font-size: 13px;
 }
-ol,
-ul {
-  list-style: none;
-}
-svg {
-  padding: 3px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
+
