--- a/src/css/comp-navbar.css
+++ b/src/css/comp-navbar.css
@@ -9,7 +9,8 @@ nav {
   width: 100%;
   margin-inline: auto;
   transition: all 0.3s ease;
-  border: 1px solid red;
+  /* border-bottom: 1px solid red; */
+  box-shadow: 0 2px 4px 0 rgb(212, 210, 210);
 }
 
 #flags {
