--- a/src/css/0/reset.css
+++ b/src/css/0/reset.css
@@ -21,16 +21,20 @@ body {
   /* height: 100%; */
   height: max-content;
 }
+html {
+  position: relative;
+}
+main {
+  padding-block: 6rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
 *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
 }
 /* body {
   display: flex;
