--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -1,12 +1,5 @@
 
-section {
-  max-width: var(--width);
-  width: 100%;
-  margin: 0 auto 45px;
-  border: 0.5px solid var(--white-1);
-  display: flex;
-  flex-direction: column;
-}
+
 h1, h2 {
   color: var(--black-1);
 }
@@ -22,7 +15,7 @@ h1 {
 h2 {
   font-size: 1.6rem;
   line-height: 1.5;
-  font-weight: 750;
+  font-weight: 800;
 }
 h3 {
   font-size: 1.2rem;
@@ -30,8 +23,9 @@ h3 {
 }
 /* titulos de los projectos */
 h4{
-  font-size: 1rem;
-  font-weight: 700;
+  font-size: 1.1rem;
+  font-weight: 800;
+  color: var(--black-2);
 }
 
 p {
