--- a/src/css/init.css
+++ b/src/css/init.css
@@ -1,18 +1,13 @@
 :root {
-  font-family: 
-  'Nunito Sans Variable',
-    'Onest Variable',
-    'Figtree Variable',
-    Avenir,
-    Helvetica,
-    Arial;
+  font-family: 'Nunito Sans Variable', 'Onest Variable', 'Figtree Variable',
+    Avenir, Helvetica, Arial;
   background-color: var(--white-1);
   color: var(--black-2);
 
   --width: 700px;
   --green: #02ca34;
 
-  --white-0: #ffffff;
+  --white-0: #f3f3f3;
   --white-1: #e6e6e6;
   --white-2: #909090;
   --black-2: #696969;
@@ -32,6 +27,13 @@
   --pad-l: 1.2rem;
 }
 
+.hoverr:hover {
+  background-color: var(--white-0);
+  border: 1px solid var(--white-0);
+}
+.hoverr {
+  transition: all 0.3s ease-in-out;
+}
 
 @media print {
   #no-print {
@@ -44,7 +46,6 @@
   font-size: 0.9rem;
   color: var(--softGrey);
 }
-
 
 @media print {
   #print {
