--- a/src/css/init.css
+++ b/src/css/init.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: 'Nunito Sans Variable', 'Onest Variable', 'Figtree Variable',
+  font-family: 'Nunito Sans Variable', 'Onest Variable', 
     Avenir, Helvetica, Arial;
   background-color: var(--white-1);
   color: var(--black-2);
