--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -1,8 +1,7 @@
-
-
 h1, h2 {
   color: var(--black-1);
 }
+/* NOMBRE DE PERFIL */
 h1 {
   font-family: 
     'Figtree Variable', 
@@ -12,6 +11,7 @@ h1 {
   font-size: 2.4rem;
   font-weight: 800;
 }
+/* TITULOS DE LAS SECCIONES */
 h2 {
   font-size: 1.6rem;
   line-height: 1.5;
@@ -21,10 +21,10 @@ h3 {
   font-size: 1.2rem;
   font-weight: 700;
 }
-/* titulos de los projectos */
+/* TITULOS DE LOS PROYECTOS */
 h4{
   font-size: 1.1rem;
-  font-weight: 800;
+  font-weight: 750;
   color: var(--black-2);
 }
 
@@ -32,14 +32,13 @@ p {
   font-size: 1rem;
   text-wrap: pretty;
   word-wrap: break-word;
-  font-weight: 500;
-}
-p.caption {
-  font-size: 0.9rem;
+  font-weight: 450;
 }
 p.bold {
-  font-size: 1.3rem;
-  font-weight: 600;
+  font-weight: 650;
+  text-transform: uppercase;
+}
+.uppercase {
 }
 
 a {
