--- a/src/css/section-languages.css
+++ b/src/css/section-languages.css
@@ -6,30 +6,29 @@ section.languages {
     flex-wrap: wrap;
     gap: 1rem;
   }
-  
-  li {
+  li.language-cards {
     flex: 1 0 calc(50% - 1rem);
     max-width: 50%;
-  }
-  
-  header {
     border-radius: 8px;
     border: 1px solid var(--white-2);
-    gap: 16px;
-    display: flex;
-    flex-direction: row;
     padding: 16px;
-    height: 100%;
-    margin: 0px;
+    header {
+      gap: 9px;
+      display: flex;
+      flex-direction: row;
+      span {
+        font-weight: 700;
+      }
+      p {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        bottom: 0;
+        font-size: 1.1rem;
+        
+      }
   }
-  
-  p {
-    display: flex;
-    justify-content: center;
-    font-size: 1rem;
-    bottom: 0;
   }
-  
   @media print {
     #print {
       page-break-before: auto;
