fix: :rocket: Fixing paths errors and config i18n

--- a/src/css/comp-navbar.css
+++ b/src/css/comp-navbar.css
@@ -16,7 +16,7 @@ nav {
     width: var(--width);
   }
 
-  a {
+  button {
     display: flex;
     justify-content: center;
     align-items: center;
