--- a/src/css/model-section.scss
+++ b/src/css/model-section.scss
@@ -1,7 +1,7 @@
-section#section-model {
+section.model {
   display: flex;
   flex-direction: column;
-  max-width: var(--width);
+  max-width: $width;
   width: 100%;
   margin: 0 auto 35px;
   gap: 0.5rem;
@@ -11,6 +11,6 @@ div#section-main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  border: 0.5px solid var(--white-1);
+  border: 0.5px solid white-1;
   width: 100%;
 }
