--- a/src/css/comp-navbar.scss
+++ b/src/css/comp-navbar.scss
@@ -3,17 +3,20 @@ nav {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: var(--nav-height);
+  height: $nav-height;
   position: absolute;
   width: 100%;
   margin-inline: auto;
   transition: all 0.3s ease;
-  box-shadow: 0 1px 2px 0px var(--white-2);
-  z-index: 1000; /* Agregado para asegurar que el nav esté por encima */
+  box-shadow: 0 1px 2px 0px $white-2;
+  z-index: 1000;
   #nav-container {
     display: flex;
     justify-content: flex-end;
-    width: var(--width);
+    width: $width;
+    @include respond-to(tablet) {
+      justify-content: center;
+    }
   }
 
   button {
