--- a/src/css/section-education.scss
+++ b/src/css/section-education.scss
@@ -2,7 +2,7 @@
 
 section#education {
   * {
-    // border: 1px solid red;
+    border: 0.5px solid rgb(157, 60, 60);
   }
   ul#education-container {
     display: flex;
