--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -50,7 +50,10 @@ $dot-size: 28px;
 
 @mixin social-links-style {
   border-radius: $border-s;
-  padding: 0.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.15rem;
   text-align: center;
 }
 
