--- a/src/css/init.scss
+++ b/src/css/init.scss
@@ -31,10 +31,10 @@ h4{
 }
 
 p {
-  font-size: 1rem;
+  font-size: 1rem ;
   text-wrap: pretty;
   word-wrap: break-word;
-  font-weight: 450;
+  // font-weight: 0;
 }
 p.bold {
   font-weight: 650;
