--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -17,10 +17,10 @@ $color: $black-2;
 $margin-inline: 2rem;
 
 $border-s: 4px;
-$border-m: 8px;
+$border-m: 6px;
 $border-l: 20px;
 
-$border-width: 1.3px;
+$border-width: 1px;
 
 $gap-s: 8px;
 $gap-m: 10px;
@@ -49,7 +49,7 @@ $dot-size: 28px;
 }
 
 @mixin social-links-style {
-  border-radius: $border-s;
+  border-radius: $border-m;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,12 +58,12 @@ $dot-size: 28px;
 }
 
 @mixin hover-effect {
-  border: $border-width solid $white-2;
+  border: $border-width solid $black-2;
   transition: all 0.3s ease-in-out;
 }
 @mixin hover-effect-hover {
   background-color: $white-0 !important;
-  border: $border-width solid $white-0 !important;
+  border: $border-width solid $white-1 !important;
 }
 
 
